# ti_renders

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md  ti_render.sln
rhi/: CMakeLists.txt  rhi.cpp  rhi.h
rhi/gl430/: gl430_buffer.cpp  gl430_buffer.h  gl430_buffer_array.cpp  gl430_buffer_array.h  gl430_command_buffer.cpp  gl430_command_buffer.h  gl430_command_queue.h  gl430_common.h  gl430_pipeline_state.h  gl430_render_context.cpp  gl430_render_context.h  gl430_render_pass.h  gl430_render_system.h  gl430_shader.cpp  gl430_shader.h  gl430_shader_program.cpp  gl430_shader_program.h  gl430_surface.h
rhi/interface/: i_buffer.h  i_buffer_array.h  i_command_buffer.h  i_command_queue.h  i_common.h  i_pipeline_state.h  i_render_context.h  i_render_pass.h  i_render_system.h  i_render_target.h  i_resource.h  i_resource_heap.h  i_shader.h  i_shader_program.h  i_surface.h  i_texture.h
rhi/vulkan/: vulkan_buffer.cpp  vulkan_buffer.h  vulkan_buffer_array.cpp  vulkan_buffer_array.h  vulkan_command_buffer.cpp  vulkan_command_buffer.h  vulkan_command_queue.cpp  vulkan_command_queue.h  vulkan_common.cpp  vulkan_common.h  vulkan_pipeline_state.cpp  vulkan_pipeline_state.h  vulkan_render_context.cpp  vulkan_render_context.h  vulkan_render_pass.cpp  vulkan_render_pass.h  vulkan_render_system.cpp  vulkan_render_system.h  vulkan_render_target.cpp  vulkan_render_target.h  vulkan_resource_heap.cpp  vulkan_resource_heap.h  vulkan_shader.cpp  vulkan_shader.h  vulkan_shader_program.cpp  vulkan_shader_program.h  vulkan_surface.cpp  vulkan_surface.h  vulkan_texture.cpp  vulkan_texture.h
tests/meta.test/: CMakeLists.txt  main.cpp  meta_test.hpp  reflector_test.hpp  serializer_test.hpp
tests/meta.test/meta_generated/: meta.generated.cpp  meta.generated.h
tests/meta.test/src/: main.cpp  meta_test.hpp
tests/tigine.core.test/: CMakeLists.txt  test.cpp
tests/tigine.core.test/asset/: StarSparrow.mat
tests/tigine.rhi.tests/hello_triangle/: CMakeLists.txt  main.cpp
tests/tigine.rhi.tests/rotate_texture/: CMakeLists.txt  main.cpp
tests/vulkan_hello/: CMakeLists.txt  test.cpp
tests/vulkan_hello/shader/: hello_triangle.frag  hello_triangle.vert
ti_render/: CMakeLists.txt  render.cpp  render.h  ti_render.vcxproj  ti_render.vcxproj.filters
ti_render.test/star_sparrow/: CMakeLists.txt  main.cpp  star_sparrow.vcxproj
ti_render.test/star_sparrow/shader/: env2background_sky_pass.shader
ti_render/common/: i_logger.h  logger_management.cpp  logger_management.h  tr_algorithm.cpp  tr_algorithm.h  tr_enum.h  tr_string_parser.cpp  tr_string_parser.h  tr_struct.h
ti_render/core/file/: file_common.cpp  image_file.cpp  image_file.h  material_file.cpp  material_file.h  mesh_file.cpp  mesh_file.h  shader_file.cpp  shader_file.h
ti_render/core/material/: material.cpp  material.h  material_common.cpp  material_common.h  material_factory.cpp  material_factory.h  metallic_roughness_material.h
ti_render/core/mesh/: mesh.cpp  mesh.h  mesh_factory.cpp  mesh_factory.h
ti_render/core/object/: camera_object.cpp  camera_object.h  dummy_object.cpp  dummy_object.h  light_object.cpp  light_object.h  mesh_object.cpp  mesh_object.h  object.cpp  object.h  point_light_object.cpp  point_light_object.h  sky_object.cpp  (+3 more)
ti_render/file/: file_common.h  image_file.cpp  image_file.h  material_file.cpp  material_file.h  mesh_file.cpp  mesh_file.h  shader_file.cpp
ti_render/graphic_interface/: graphic_interface.h
ti_render/material/: material.cpp  material.h  material_common.h  material_factory.cpp  material_factory.h  metallic_roughness_material.h
ti_render/mesh/: mesh.h  mesh_factory.cpp  mesh_factory.h
ti_render/object/: camera_object.cpp  camera_object.h  dummy_object.cpp  light_object.h  mesh_object.h  object.cpp  object.h  point_light_object.h  sky_object.h
ti_render/pass/: emissive_pass.h  final_pass.h  geometry_pass.h  light_pass.cpp  light_pass.h  pass_management.h  pre_pass.cpp  pre_pass.h  shadowmap_pass.cpp  shadowmap_pass.h  sky_pass.cpp  sky_pass.h  water_pass.h
ti_render/scene/: scene.h
tigine.graphic/: CMakeLists.txt  graphic.h  hello_triangle_frag.h  main.cpp
tigine.graphic/gl430/: gl430_buffer.cpp  gl430_buffer.h  gl430_buffer_array.cpp  gl430_buffer_array.h  gl430_command_buffer.cpp  gl430_command_buffer.h  gl430_command_queue.h  gl430_common.h  gl430_pass.h  gl430_pipeline.h  gl430_pipeline_state.h  gl430_render_context.cpp  gl430_render_context.h  gl430_render_pass.h  gl430_render_system.h  gl430_shader.cpp  gl430_shader.h  gl430_shader_program.cpp  gl430_shader_program.h  gl430_surface.h
tigine.graphic/gl430plus/: gl430plus_buffer.cpp  gl430plus_buffer.h  gl430plus_buffer_array.cpp  gl430plus_buffer_array.h  gl430plus_common.h  gl430plus_render_context.cpp  gl430plus_render_context.h  gl430plus_render_system.cpp  gl430plus_render_system.h  gl430plus_shader.cpp  gl430plus_shader.h  gl430plus_shader_program.cpp  gl430plus_shader_program.h  gl430plus_surface.h
tigine.graphic/interface/: i_buffer.h  i_buffer_array.h  i_command_buffer.h  i_command_queue.h  i_common.h  i_pipeline_layout.h  i_pipeline_state.h  i_render_context.h  i_render_pass.h  i_render_system.h  i_render_target.h  i_resource.h  i_resource_heap.h  i_sampler.h  i_shader.h  i_shader_program.h  i_surface.h  i_texture.h
tigine.graphic/vulkan/: vulkan_buffer.cpp  vulkan_buffer.h  vulkan_buffer_array.cpp  vulkan_buffer_array.h  vulkan_command_buffer.cpp  vulkan_command_buffer.h  vulkan_command_queue.cpp  vulkan_command_queue.h  vulkan_common.cpp  vulkan_common.h  vulkan_pipeline_state.cpp  vulkan_pipeline_state.h  vulkan_render_context.cpp  vulkan_render_context.h  vulkan_render_pass.cpp  vulkan_render_pass.h  vulkan_render_system.cpp  vulkan_render_system.h  vulkan_render_target.cpp  vulkan_render_target.h  vulkan_resource_heap.cpp  vulkan_resource_heap.h  vulkan_shader.cpp  vulkan_shader.h  vulkan_shader_program.cpp  vulkan_shader_program.h  vulkan_surface.cpp  vulkan_surface.h  vulkan_texture.cpp  vulkan_texture.h
toolkit/meta/: CMakeLists.txt  meta.h  reflector.cpp  serializer.cpp  serializer.h
(+150 files in other folders)
